# TBD-reforger

./: .coding-standards-allowlist.yaml  .editorconfig  .editorconfig-checker.json  .gitattributes  .gitignore  .mcp.json  BACKEND_ARCHITECTURE.md  CLAUDE-CODE-START.md  CLAUDE-CONTINUATION.md  CLAUDE.md  Cargo.toml  Claude_Context_Handoff.md  MILESTONES.md  Makefile  README.md  REGISTRATION_FLOW_DESIGN.md  rust-toolchain.toml  tbd-reforger-platform-build-plan.md
Design_Docs/: macOS_UX_Architecture.md
Tbdevent_Website/: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.staging.yml  docker-compose.yml  embed.go  go.mod  go.sum
apps/website-leptos/: Cargo.toml  README.md  Trunk.toml  index.html
apps/website-leptos/src/: announcements.rs  app_routes.rs  approvals.rs  arsenal.rs  asset_catalog.rs  attributes.rs  auth.rs  client.rs  content.rs  create_mission_dialog.rs  datefmt.rs  dto.rs  eden_chrome.rs  editor_ops.rs  editor_session.rs  event_hub.rs  event_manager.rs  layout.rs  main.rs  mission_commands.rs  mission_doc.rs  mission_editor.rs  mission_history.rs  mission_hydrate.rs  mission_overview.rs  missions.rs  modpacks.rs  mortar.rs  nav.rs  orbat_selection.rs  outliner.rs  personnel.rs  router.rs  select_tool.rs  server_control.rs  server_intel.rs  settings.rs  split_pane.rs  sse.rs  ui.rs  (+2 more)
apps/website-leptos/src/world_assets/: dem_vectors.rs  satellite.rs  tbd_sat.rs
apps/website-leptos/style/: aegis.css
apps/website/api/: .env.example  .gitignore  Cargo.toml  docker-compose.yml
apps/website/api/internal/db/migrations/: 05_registry_items.sql
apps/website/api/migrations/: 0002_populate_leaderboard_mv.sql  0003_registry_compat.sql  0004_registry_items_v3.sql  0006_user_factions.sql
apps/website/api/seeds/: registry_dev.sql
apps/website/api/src/: app.rs  config.rs  error.rs  lib.rs  state.rs
apps/website/api/src/auth/: jwt.rs  mod.rs  tokens.rs
apps/website/api/src/contract/: validate.rs
apps/website/api/src/handlers/: admin.rs  announcements.rs  approvals.rs  audit.rs  auth.rs  dashboard.rs  events.rs  field_tools.rs  me.rs  missions.rs  mod.rs  servers.rs  telemetry.rs
apps/website/api/src/middleware/: auth.rs  request_id.rs
apps/website/api/src/models/: admin.rs  mission.rs  telemetry.rs
apps/website/api/src/services/: http_retry.rs  mission_compile.rs  role_sync.rs  text.rs  token_purge.rs
apps/website/api/tests/: admin_field.rs  auth_refresh.rs  content_read.rs  dashboard_reads.rs  db_migrate.rs  events.rs  factions.rs  identity_link.rs  lifecycle_extra.rs  misc_integration.rs  missions.rs  models_fromrow.rs  models_serde.rs  null_tolerance.rs  oauth_redirect.rs  registry_compat.rs  services_http.rs  telemetry.rs
artifacts/: README.md
crates/map-engine-core/: Cargo.toml
crates/map-engine-core/src/: js.rs  label.rs  lib.rs  slots_gpu.rs
crates/map-engine-core/src/camera/: glmat4.rs  mod.rs  ortho.rs
crates/map-engine-core/src/dem/: downsample.rs  hillshade.rs  mod.rs  peaks.rs  png_decode.rs  sample.rs
crates/map-engine-core/src/doc/: mod.rs  soa.rs  store.rs
crates/map-engine-core/src/doll/: mod.rs
crates/map-engine-core/src/geometry/: contours.rs  density_island.rs  forest_mass.rs  mod.rs  polyline_strip.rs  sea_band.rs  tbdd.rs  triangulate.rs  vector_compose.rs
crates/map-engine-core/src/mission/: compile.rs  flatten.rs  kit.rs  mod.rs
crates/map-engine-core/src/spatial/: cluster.rs  mod.rs  point_index.rs
crates/map-engine-core/src/world/: airfield.rs  cartographic_strip.rs  chunk.rs  chunk_math.rs  classify.rs  density_ladder.rs  glyph_math.rs  importance_declutter.rs  index.rs  locations.rs  lod_gates.rs  manifest.rs  mod.rs  obb.rs  prefab.rs  regions.rs  residency.rs  road_labels.rs  roads.rs  store.rs
crates/map-engine-core/tests/: camera_props.rs  deckgl_ortho_parity.rs
crates/map-engine-core/tests/fixtures/: deckgl_ortho_goldens.json
crates/map-engine-render/: Cargo.toml
crates/map-engine-render/src/: compute_cull.rs  damage.rs  density_heat.rs  doll.wgsl  doll3d.rs  doll_pack.rs  draw_order.rs  engine.rs  icon_cull_gpu.rs  lanes.rs  lib.rs  probe.rs  scene.rs  shader.wgsl  text_font_table.rs  text_layout.rs
crates/map-engine-wasm/: Cargo.toml
crates/map-engine-wasm/src/: lib.rs
deploy/: tbd-reforger.service
docs/: .doc-manifest.after  .doc-manifest.before  AGENT_COMMIT_CHECKLIST.md  MILESTONES.md  README.md  REORG_CHANGELOG.md  STAGING-SERVER.md  TAGS.md  TICKET_BRAINSTORM.md  TICKET_DEV_QUEUE.md  TICKET_LEAD.md  TICKET_MOD_QUEUE.md  TICKET_REGISTRY.md
frontend/: README.md
mod/: CLAUDE-CODE-START.md  CLAUDE-CONTINUATION.md  MILESTONES.md  README.md  tbd-reforger-platform-build-plan.md
scripts/: backfill-registry-monorepo.py  bootstrap-staging-server.sh  debug-direct-join.sh  deploy-staging.sh  deploy.env.example  remote-log-grep.sh  rewrite-doc-links.py  rewrite-ticket-paths.py  run-dev-server.sh  (+9 more)
tools/tbd-tools/: Cargo.toml  gate-env.json
tools/tbd-tools/fixtures/t159/manifests/: components.csv  css_tokens.txt  deps.csv  hooks.csv  routes.csv
tools/tbd-tools/fixtures/t159/oracle-freeze/: announcements.dom.json  approvals.dom.json  callback.dom.json  content.dom.json  content.react.dom.json  dashboard.dom.json  deployments.dom.json  eventmgr.dom.json  login.dom.json  manifest.json  missions.dom.json  missionview.dom.json  modpacks.dom.json  mortar.dom.json  notfound.dom.json  orbat.dom.json  servercontrol.dom.json  serverintel.dom.json  vehicles.dom.json  wikislug.dom.json
tools/tbd-tools/src/: cdp.rs  density.rs  doctor.rs  forest.rs  geometry.rs  inject.rs  lib.rs  serve.rs  smokes.rs  sroutes.rs  vsuite.rs
tools/tbd-tools/src/map/: carto.rs  glyphs.rs  img.rs  labels.rs  mod.rs  sap.rs  unified.rs  water.rs
tools/tbd-tools/src/world/: aux.rs  build.rs  classify.rs  edds.rs  gates.rs  jsval.rs  mod.rs  pak.rs  topo.rs
xtask/: Cargo.toml
xtask/src/: check.rs  cmds.rs  codegen_schema.rs  constants.rs  debug_cmd.rs  gap.rs  golden_gate.rs  label_gates.rs  main.rs  mcp.rs  node_free.rs  prompt.rs  registry.rs  repro.rs  root.rs  schema_gates.rs  sync.rs
(+1579 files in other folders)
