# Cargo workspace root (T-145 map-engine Rust/wasm port, Phase 0).
# Members: the existing Axum backend + the new shared compute core + its wasm-bindgen shim.
# The backend was a standalone crate; folding it in gives one lock + one target dir and lets it
# share `map-engine-core` (Phase 2). No `[profile]` relocation was needed (the backend Cargo.toml
# has none). `map-engine-wasm` is built for wasm32 via wasm-pack; it also compiles for native so
# `cargo build --workspace` stays green.
[workspace]
resolver = "3"
members = [
    "apps/website",
    "crates/map-engine-core",
    "crates/map-engine-render",
    "crates/map-engine-wasm",
]
