# Cargo workspace root. Members: the website app (Axum API + Leptos SPA nested under
# apps/website/ since T-171), the shared map-engine compute/render crates + wasm shim,
# and the repo tooling (xtask gates/codegen, tbd-tools gate harness + asset pipelines).
# `map-engine-wasm` is built for wasm32 via wasm-pack; it also compiles for native so
# `cargo build --workspace` stays green.
[workspace]
resolver = "3"
members = [
    "apps/website/api",
    "apps/website/frontend",
    "crates/map-engine-core",
    "crates/map-engine-render",
    "crates/map-engine-wasm",
    "xtask",
    "tools/tbd-tools",
]
