[package]
name = "xtask"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
license = "UNLICENSED"
publish = false
description = "T-161 ticket CLI (Python → Rust). cargo xtask ticket …"

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
walkdir = "2"
