[package]
name = "xtask"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
license = "UNLICENSED"
publish = false
description = "T-161 ticket CLI + T-162 MCP/debug/repro helpers. cargo xtask …"

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
anyhow = "1"
flate2 = "1"
png = "0.17"
clap = { version = "4", features = ["derive"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
walkdir = "2"
jsonschema = { version = "0.46.10", default-features = false }
tbd-tools = { path = "../tools/tbd-tools" }
map-engine-core = { path = "../crates/map-engine-core", features = ["png", "world"] }
typify = "0.7"
schemars = "0.8"
prettyplease = "0.2"
syn = "2"
