# T-159 — Leptos (Rust/wasm) rewrite of the website SPA. Parallel-lane crate; the React app under
# apps/website/frontend stays the default until the cutover slice (T-159.24). CSR-only for now
# (L1); links the existing map-engine crates directly from T-159.15 (the wasm-boundary collapse).
[package]
name = "website-leptos"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
leptos = { version = "0.8", features = ["csr"] }
leptos_router = "0.8"
console_error_panic_hook = "0.1"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gloo-net = "0.6"
js-sys = "0.3"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Window",
    "Location",
    "Storage",
    "RequestCredentials",
    "HtmlCanvasElement",
    # T-159.15.1 Mission Creator render loop: container div, its bounding rect, wheel-zoom, and the
    # capture/passive wheel + window resize listeners.
    "HtmlDivElement",
    "Element",
    "DomRect",
    "WheelEvent",
    # T-159.15.2 Mission Creator pan: MMB/RMB drag (PointerEvent) + contextmenu (MouseEvent).
    # `PointerEvent = ["Event","MouseEvent","UiEvent"]` transitively enables the inherited
    # button()/client_x()/prevent_default() accessors; MouseEvent is listed for the standalone
    # contextmenu handler type. set/has/release_pointer_capture live under the existing `Element`.
    "PointerEvent",
    "MouseEvent",
    "EventTarget",
    "AddEventListenerOptions",
] }

# T-159.15 Mission Creator engine — the wasm-boundary collapse. The Leptos app links the wgpu render
# engine directly (one wasm module / one linear memory), so it owns `RenderEngine` as plain Rust
# instead of reaching it through the map-engine-wasm shim. rlib; its wgpu stack is wasm32-gated.
[target.'cfg(target_arch = "wasm32")'.dependencies]
map-engine-render = { path = "../../crates/map-engine-render" }

# [profile.*] lives in the workspace root Cargo.toml (member profiles are ignored). trunk applies
# wasm-opt via the index.html data-wasm-opt attribute.
