[package]
name = "map-engine-wasm"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
license = "UNLICENSED"
publish = false
description = "wasm-bindgen shim exposing map-engine-core to the TypeScript UI shell (built via wasm-pack)."

[lib]
# cdylib → the wasm artifact; rlib → so `cargo build --workspace` (native) links it too.
crate-type = ["cdylib", "rlib"]

[dependencies]
map-engine-core = { path = "../map-engine-core", features = ["png", "mission"] }
wasm-bindgen = "0.2"
