[package]
name = "map-engine-wasm"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
license = "UNLICENSED"
publish = false
description = "wasm-bindgen shim exposing map-engine-core to the TypeScript UI shell (built via wasm-pack)."

[lib]
# cdylib → the wasm artifact; rlib → so `cargo build --workspace` (native) links it too.
crate-type = ["cdylib", "rlib"]

[dependencies]
map-engine-core = { path = "../map-engine-core", features = ["png", "mission", "doc"] }
# The wgpu render engine is linked in so it ships inside this single bundler wasm module — one
# linear memory shared by `MissionDoc` and `RenderEngine` (T-151.0 L1, zero-copy doc→GPU). The
# crate's heavy GPU/web stack is `cfg(wasm32)`-gated, so native `cargo build --workspace` stays lean.
map-engine-render = { path = "../map-engine-render" }
wasm-bindgen = "0.2"
