# tbd-tools — the async/heavy Rust tooling crate (T-165 Node eradication).
# Split of responsibilities vs `xtask` (which stays sync + dependency-light):
#   xtask     = registry/ticket ops, sync schema/citation gates, codegen, small verifies
#   tbd-tools = everything async or heavy: the CDP gate harness (`gate`), the MCP broker
#               (`mcpd`), the map-asset pipeline (`map`), the world-export pipeline (`world`)
# Dep versions pinned to what the workspace lock already resolves (apps/website) so the
# lock barely grows; tokio-tungstenite is the one genuinely new transport dep.
[package]
name = "tbd-tools"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow = "1"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
flate2 = "1"
futures-util = "0.3"
reqwest = { version = "0.13.4", default-features = false, features = ["json", "charset", "rustls-no-provider"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
sha2 = "0.11"
tokio = { version = "1.52", features = ["full"] }
tokio-tungstenite = "0.30"

[[bin]]
name = "gate"
path = "src/bin/gate.rs"

[[bin]]
name = "mcpd"
path = "src/bin/mcpd.rs"

[lib]
name = "tbd_tools"
path = "src/lib.rs"
